--- a/scss/style.scss
+++ b/scss/style.scss
@@ -94,9 +94,12 @@
     list-style: none;
     text-decoration: none;
 }
+.lock{
+    overflow: hidden;
+}
 .container{
     max-width: 1210px;
-    padding: 0 15;
+    padding: 0 15px;
     margin:0 auto;
 }
 
