--- a/scss/style.scss
+++ b/scss/style.scss
@@ -71,21 +71,6 @@
     font-weight: 800;
     font-style: italic;
 }
-//Переменные=============================================================
-:root{
-    --font-montserrat-norms-light:"Montserrat-Light",sans-serif;
-    --font-montserrat-italic-light:"Montserrat-LightItalic",sans-serif;
-    --font-montserrat-norms-regular:'Montserrat-Regular',sans-serif;
-    --font-montserrat-italic-regular:'Montserrat-Italic',sans-serif;
-    --font-montserrat-norms-medium:'Montserrat-Medium',sans-serif;
-    --font-montserrat-italic-medium:'Montserrat-MediumItalic',sans-serif;
-    --font-montserrat-norms-semibold:'Montserrat-SemiBold',sans-serif;
-    --font-montserrat-italic-semibold:'Montserrat-SemiBoldItalic',sans-serif;
-    --font-montserrat-norms-bold:'Montserrat-Bold',sans-serif;
-    --font-montserrat-italic-bold:'Montserrat-BoldItalic',sans-serif;
-    --font-montserrat-norms-extrabold:"Montserrat-ExtraBold",sans-serif;
-    --font-montserrat-italic-extrabold:"Montserrat-ExtraBoldItalic",sans-serif;
-}
 //обнуления===================================================================
 *{
     margin: 0;
@@ -101,8 +86,66 @@
     max-width: 1210px;
     padding: 0 15px;
     margin:0 auto;
+    @media screen and (max-width:768px){
+        padding: 0 30px;
+    }
 }
-
+//Общая стилизация=============================================================
+.ibg{
+    position: relative;
+    img{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        object-fit: cover;
+    }
+}
+//button===============================================
+.button{
+    min-height: 70px;
+    font-family: var(--font-montserrat-norms-bold);
+    font-size: 20px;
+    line-height: 100%;
+    color: #FFFFFF;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--main-color);
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    box-shadow:10px 15px 0px #CDE1FF;
+    &:hover{
+        box-shadow:5px 5px 0px #CDE1FF;
+    }
+    &:active{
+        box-shadow:0px 1px 0px #CDE1FF;
+    }
+    @media screen and (max-width:768px){
+        box-shadow:5px 10px 0px #CDE1FF;
+    }
+    @media screen and (max-width:360px){
+        font-size: 16px;
+    }
+}
+//fonts================================================
+.title{
+    font-family: var(--font-montserrat-norms-extrabold);
+    font-size: 40px;
+    line-height: 130%;
+    letter-spacing: 0.02em;
+    color: #7872B9;
+}
+.text{
+    font-family: var(--font-montserrat-norms-regular);
+    font-size: 20px;
+    line-height: 140%;
+    letter-spacing: 0.01em;
+    color: #4D4D52;
+}
 
 
 
