--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -142,4 +142,255 @@
         }
     }
 }
+//online==================================================================
+.online {
+    padding: 82px 0 100px;
+    @media screen and (max-width:768px){
+        padding: 40px 0 45px;
+    }
+    &__body {
+        text-align: center;
+    }
+
+    &__title {
+        margin-bottom: 80px;
+        max-width: 1200px;
+        @media screen and (max-width:480px){
+            font-size: 20px;
+            margin-bottom: 30px;
+        }
+    }
+
+    &__wrapper {
+        display: flex;
+        gap: 20px;
+        @media screen and (max-width:900px){
+            display: none;
+        }
+    }
+
+    &__item {
+        flex: 0 1 33.333%;
+    }
+}
+//слайдер ниже 900px
+.online__slider{
+    display: none;
+    @media screen and (max-width:900px){
+       display: block;
+       position: relative;
+    }
+    //Ограничивающая оболочка
+    .slick-list{
+        overflow: hidden;
+       
+    }
+    //Дорожка слайдера
+    .slick-track{
+        display: flex;
+        column-gap:20px;
+    }
+    //Точки для слайдера
+    .slick-dots{
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+        gap:0 30px;
+        @media screen and (max-width:480px){
+            margin-top: 20px;
+        }
+        //Просто точка
+        li{
+            width: 30px;
+            height: 30px;
+            background: #CDE1FF;
+            border-radius: 50%;
+            cursor: pointer;
+            button{
+                display: none;
+            }
+            @media screen and (max-width:480px){
+                width: 10px;
+                height: 10px;
+            }
+        }
+        //Активная точка
+        .slick-active{
+            background: #7872B9;
+        }
+    }
+
+    //Элементы для слайдера
+   
+    .item-online__content{
+        min-height: calc(100% - 70px);
+       
+    }
+}
+.item-online {
+    position: relative;
+    &__content {
+        margin-top: 110px;
+        padding: 130px 30px 44px 30px;
+        background: #EBF5FF;
+        border-radius: 20px;
+        text-align: center;
+        @media screen and (max-width:992px){
+            margin-top: 70px;
+            padding: 90px 15px 44px 15px;
+        }
+        @media screen and (max-width:768px){
+            margin-top: 60px;
+            padding: 90px 20px 30px 20px;
+        }
+    }
+
+    &__title {
+        font-family: var(--font-montserrat-norms-semibold);
+        font-size: 24px;
+        line-height: 150%;
+        letter-spacing: 0.02em;
+        color: #4D4D52;
+        margin-bottom: 15px;
+        @media screen and (max-width:480px){
+            font-size: 18px;
+            
+        }
+    }
+
+    &__text {
+        font-family: var(--font-montserrat-norms-regular);
+        font-size: 18px;
+        line-height: 140%;
+        letter-spacing: 0.01em;
+        color: #4D4D52;
+        @media screen and (max-width:480px){
+            font-size: 14px;
+        }
+    }
+
+    &__img{
+        position: absolute;
+        top: 0;
+        left:calc(50% - 110px);
+        @media screen and (max-width:992px){
+            width: 150px;
+            height: 150px;
+            left:calc(50% - 75px);
+        }
+        @media screen and (max-width:480px){
+            width: 120px;
+            height: 120px;
+            left:calc(50% - 60px);
+        }
+    }
+}
+//together====================================================================
+.together {
+    background: #F9FCFF;
+    &__body {
+        text-align: center;
+        padding: 80px 0 90px;
+        @media screen and (max-width:768px){
+            padding: 40px 0 40px;
+        }
+    }
+    &__content{
+        position: relative;
+        &:after{
+            content: '';
+            position: absolute;
+            width: 109px;
+            height: 140px;
+            background: url(../img/home-page/together/arrow.png) no-repeat;
+            bottom: -100px;
+            right: 192px;
+            
+        }
+    }
+    &__title {
+        font-family: var(--font-montserrat-italic-semibold);
+        font-size: 24px;
+        line-height: 140%;
+        color: var(--secondary-color);
+        margin-bottom: 10px;
+    }
+
+    &__subtitle {
+        margin-bottom: 20px;
+    }
+    &__text {
+        max-width: 578px;
+        margin: 0 auto;
+        
+    }
+}
+
+.together__container{
+    max-width: 1600px;
+    margin: 0 auto;
+}
+.slider-together {
+    margin-top: 145px;
+    cursor: pointer;
+   
+   
+    @media screen and (max-width:768px){
+        margin-top: 80px;
+    }
+    .slick-list{
+        overflow: hidden;
+    }
+    .slick-track{
+        display: flex;
+        column-gap:30px;
+        @media screen and (max-width:768px){
+            column-gap:15px;
+        }
+    }
+    //Элемент слайдера
+    .slick-slide{
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        div:last-child{
+            transform: translate(100px,0);
+        }
+        @media screen and (max-width:768px){
+            row-gap: 15px;
+        }
+    }
+    &__item {
+        border: 2px solid #7872B9;
+        border-radius: 40px;
+        min-height: 50px;
+        padding: 0 40px;
+        display: flex!important;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-family: var(--font-montserrat-italic-semibold);
+        font-size: 20px;
+        line-height: 120%;
+        color: var(--main-color);
+        @media screen and (max-width:768px){
+            font-size: 14px;
+            min-height: 50px;
+            padding: 0 27px;
+        }
+        &_purple {
+            color:#fff;
+            background: #7872B9;
+            @media screen and (max-width:768px){
+                font-size: 14px;
+                min-height: 50px;
+                padding: 0 27px;
+            }
+        }
+
+    }
+
+}
+
+
 
