--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,11 @@
   letter-spacing: 0.02em;
   color: #7872B9;
 }
+@media screen and (max-width: 640px) {
+  .title {
+    font-size: 18px;
+  }
+}
 
 .text {
   font-family: var(--font-montserrat-norms-regular);
@@ -147,4 +152,9 @@
   line-height: 140%;
   letter-spacing: 0.01em;
   color: #4D4D52;
+}
+@media screen and (max-width: 480px) {
+  .text {
+    font-size: 14px;
+  }
 }
