--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -297,6 +297,8 @@
     }
     &__content{
         position: relative;
+        display: inline-flex;
+        flex-direction: column;
         &:after{
             content: '';
             position: absolute;
@@ -304,8 +306,13 @@
             height: 140px;
             background: url(../img/home-page/together/arrow.png) no-repeat;
             bottom: -100px;
-            right: 192px;
-            
+            right: -107px;
+            @media screen and (max-width:992px){
+                transform: rotate(30deg) scale(0.45);
+              
+                bottom: -100px;
+                right: -10px;
+            }
         }
     }
     &__title {
@@ -373,6 +380,8 @@
         font-size: 20px;
         line-height: 120%;
         color: var(--main-color);
+        outline: none;
+        background: none;
         @media screen and (max-width:768px){
             font-size: 14px;
             min-height: 50px;
@@ -391,6 +400,160 @@
     }
 
 }
+//specialist====================================================================
+.specialist {
+    padding: 100px 0;
+    @media screen and (max-width:768px){
+        padding: 40px 0;
+    }
+    &__title {
+        font-family: var(--font-montserrat-norms-semibold);
+        font-size: 24px;
+        line-height: 140%;
+        letter-spacing: 0.01em;
+        color: #4D4D52;
+        margin-bottom: 10px;
+    }
+
+    &__subtitle {
+        max-width: 1080px;
+        margin-bottom: 27px;
+        span{
+            position: relative;
+            &:after{
+                position: absolute;
+                content: '';
+                bottom: -11px;
+                right: 5px;
+                width: 321px;
+                height: 12px;
+                background: url(../img/home-page/specialist/arrow-yellow.png) no-repeat;
+                @media screen and (max-width:640px){
+                    transform: scale(0.5);
+                    right: -90px;
+                }
+            }
+        }
+        
+    }
+}
+.flex-specialist {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 60px;
+    gap:30px;
+    @media screen and (max-width:640px){
+        display: none;
+    }
+    @media screen and (max-width:1100px){
+        gap:20px;
+    }
+    &__item {
+        background: #EBF5FF;
+        border-radius: 20px;
+        display: flex;
+        align-items: flex-start;
+        gap: 50px;
+        @media screen and (max-width:1100px){
+            gap: 20px;
+        }
+        &_long{
+            flex: 1 0 57%; padding: 30px 20px 10px 30px;
+        }
+        &_short{
+            flex: 1 0 40%;
+            padding: 40px 90px 40px 100px;
+            @media screen and (max-width:1100px){
+                padding: 30px 30px 40px 40px;
+            }
+            @media screen and (max-width:640px){
+                flex: 1 0 100%;
+            }
+        }
+        img{
+           @media screen and (max-width:1110px){
+                width: 100px;
+                height: 100px;
+           }
+        }
+    }
+
+    &__content {
+
+    }
+
+    &__title {
+        margin-bottom: 15px;
+    }
+
+    &__text {
+
+    }
+}
+//Слайдер
+.slider-specialist {
+    display: none;
+    @media screen and (max-width:640px){
+        display: block;
+        margin-top: 40px;
+    }
+    .slick-list{
+        overflow: hidden;
+    }
+    .slick-track{
+        display: flex;
+        gap: 10px;
+    }
+    //Точки слайдера
+    .slick-dots{
+        margin-top: 20px;
+        display: flex;
+        gap: 30px;
+        justify-content: center;
+        li{
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            background: #CDE1FF;
+            cursor: pointer;
+            button{display: none;}
+            @media screen and (max-width:360px){
+                width: 10px;
+                height: 10px;
+            }
+        }
+        .slick-active{
+            background: #7872B9;
+        }
+    }
+    &__item {
+        background: #F9FCFF;
+        border-radius: 15px;
+        padding: 30px 20px;
+        @media screen and (max-width:360px){
+            padding: 30px 10px;
+        }
+    }
+
+    &__content {
+        text-align: center;
+    }
+
+    &__title {
+        font-family: var(--font-montserrat-italic-semibold);
+        font-size: 18px;
+        line-height: 140%;
+        letter-spacing: 0.01em;
+        color: var(--secondary-color);
+        margin-bottom: 8px;
+    }
+
+    &__text {
+    }
+}
+
+
+
 
 
 
