--- a/scss/style.scss
+++ b/scss/style.scss
@@ -138,6 +138,9 @@
     line-height: 130%;
     letter-spacing: 0.02em;
     color: #7872B9;
+    @media screen and (max-width:640px){
+        font-size: 18px;
+    }
 }
 .text{
     font-family: var(--font-montserrat-norms-regular);
@@ -145,6 +148,9 @@
     line-height: 140%;
     letter-spacing: 0.01em;
     color: #4D4D52;
+    @media screen and (max-width:480px){
+        font-size: 14px;
+    }
 }
 
 
