--- a/css/home-page.css
+++ b/css/home-page.css
@@ -870,6 +870,7 @@
 .item-ask__icon {
   width: 40px;
   height: 40px;
+  min-width: 40px;
   background: url(../img/home-page/ask/plus.png) center no-repeat;
   cursor: pointer;
   transition: all 0.3s;
@@ -880,8 +881,108 @@
     height: 30px;
     background-size: cover;
     flex: 0 0 30px;
+    min-width: 30px;
   }
 }
 .item-ask__icon.open {
   background: url(../img/home-page/ask/minus.png) center no-repeat;
+}
+
+.virtual {
+  padding: 120px 0;
+  background: #F9FCFF;
+}
+@media screen and (max-width: 768px) {
+  .virtual {
+    padding: 40px 0 50px;
+  }
+}
+.virtual__body {
+  text-align: center;
+  position: relative;
+  background: url(../img/home-page/virtual/phone.png) 100% 0 no-repeat;
+}
+@media screen and (max-width: 1160px) {
+  .virtual__body {
+    background: url(../img/home-page/virtual/phone.png) 100% 0 no-repeat;
+  }
+  .virtual__body:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #F9FCFF;
+    opacity: 0.7;
+  }
+}
+@media screen and (max-width: 480px) {
+  .virtual__body {
+    background: url(../img/home-page/virtual/mini-phone.png) no-repeat;
+    background-position: bottom 100px left 50%;
+  }
+  .virtual__body:before {
+    display: none;
+  }
+}
+.virtual__content {
+  max-width: 680px;
+  text-align: left;
+}
+@media screen and (max-width: 480px) {
+  .virtual__content {
+    padding-bottom: 387px;
+  }
+}
+.virtual__title {
+  margin-bottom: 35px;
+  z-index: 1;
+  position: relative;
+}
+.virtual__text {
+  font-family: var(--font-montserrat-norms-semibold);
+  font-size: 20px;
+  line-height: 140%;
+  letter-spacing: 0.01em;
+  color: #4D4D52;
+  max-width: 580px;
+  margin-bottom: 45px;
+  position: relative;
+  z-index: 1;
+}
+.virtual__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 45px;
+}
+.virtual__item {
+  font-family: var(--font-montserrat-norms-regular);
+  font-size: 18px;
+  line-height: 140%;
+  color: var(--secondary-color);
+  padding-left: 70px;
+  position: relative;
+}
+.virtual__item::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 40px;
+  height: 40px;
+  background: url(../img/home-page/virtual/check.png) center/cover no-repeat;
+}
+.virtual__button {
+  max-width: 390px;
+  width: 100%;
+  padding: 10px;
+  margin: 100px auto 0 auto;
+  position: relative;
+  z-index: 1;
+}
+@media screen and (max-width: 480px) {
+  .virtual__button {
+    margin: 50px auto 0 auto;
+  }
 }
