--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -691,11 +691,6 @@
         }
     }
 }
-.text {
-}
-.button {
-}
-
 //ask=============================================================================
 .ask {
     padding: 120px 0 114px;
@@ -729,7 +724,6 @@
         width: 100%;
     }
 }
-
 .item-ask {
     background: #F9FCFF;
     border-radius: 15px;
@@ -788,6 +782,7 @@
     &__icon{
         width: 40px;
         height: 40px;
+        min-width: 40px;
         background: url(../img/home-page/ask/plus.png) center no-repeat;
         cursor: pointer;
         transition: all 0.3s;
@@ -796,6 +791,7 @@
             height: 30px;
             background-size:cover;
             flex: 0 0 30px;
+            min-width: 30px;
         }
     }
     &__icon.open{
@@ -803,6 +799,104 @@
     }
    
 }
+//virtual========================================================================
+.virtual {
+    padding: 120px 0;
+    background: #F9FCFF;
+    @media screen and (max-width:768px){
+        padding: 40px 0 50px;
+    }
+    &__body {
+        text-align: center;
+        position: relative;
+        background: url(../img/home-page/virtual/phone.png) 100% 0 no-repeat;
+        @media screen and (max-width:1160px){
+            background: url(../img/home-page/virtual/phone.png) 100% 0 no-repeat;
+            &:before{
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: #F9FCFF;
+                opacity: 0.7;
+            }
+        }
+        @media screen and (max-width:480px){
+            background: url(../img/home-page/virtual/mini-phone.png)  no-repeat;
+            background-position: bottom 100px left 50%;
+            &:before{
+               display: none;
+            }
+        }
+    }
+    &__content {
+        max-width: 680px;
+        text-align: left;
+        @media screen and (max-width:480px){
+            padding-bottom: 387px;
+        }
+    }
+
+    &__title {
+        margin-bottom: 35px;
+        z-index: 1;
+        position: relative;
+    }
+
+    &__text {
+        font-family: var(--font-montserrat-norms-semibold);
+        font-size: 20px;
+        line-height: 140%;
+        letter-spacing: 0.01em;
+        color: #4D4D52;
+        max-width: 580px;
+        margin-bottom: 45px;
+        position: relative;
+        z-index: 1;
+    }
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        row-gap: 45px;
+       
+    }
+
+    &__item {
+        font-family: var(--font-montserrat-norms-regular);
+        font-size: 18px;
+        line-height: 140%;
+        color:var(--secondary-color);
+        padding-left: 70px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 40px;
+            height: 40px;
+            background: url(../img/home-page/virtual/check.png) center/cover no-repeat;
+        }
+    }
+
+    &__button {
+        max-width: 390px;
+        width: 100%;
+        padding: 10px;
+        margin: 100px auto 0 auto;
+        position: relative;
+        z-index: 1;
+        @media screen and (max-width:480px){
+            margin: 50px auto 0 auto;
+        }
+    }
+}
+
+
+
 
 
 
