--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -835,7 +835,7 @@
         max-width: 680px;
         text-align: left;
         @media screen and (max-width:480px){
-            padding-bottom: 387px;
+            padding-bottom: 337px;
         }
     }
 
@@ -879,6 +879,13 @@
             width: 40px;
             height: 40px;
             background: url(../img/home-page/virtual/check.png) center/cover no-repeat;
+            @media screen and (max-width:480px){
+                width: 20px;
+                height: 20px;
+            }
+        }
+        @media screen and (max-width:480px){
+            padding-left: 40px;
         }
     }
 
@@ -894,7 +901,102 @@
         }
     }
 }
+//help=========================================================================
+.help {
+    padding: 150px 0 120px;
+    @media screen and (max-width:768px){
+        padding: 50px 0;
+    }
+    &__body {
+        background: #F9FCFF;
+        border-radius: 25px;
+        display: flex;
+        justify-content: flex-end;
+        padding: 55px 0 72px;
+        position: relative;
+    }
 
+    &__inner {
+       padding: 0 20px;
+    }
+
+    
+    &__woman {
+        position: absolute;
+        top: -29px;
+        right: 30px;
+        @media screen and (max-width:768px){
+           width: 90px;
+           height: 90px; 
+           top: -24px;
+           right: 10px;
+        }
+        @media screen and (max-width:340px){
+            width: 90px;
+            height: 90px; 
+            top: -30px;
+            right: 0px;
+         }
+    }
+}
+
+.info-help {
+    padding-right: 300px;
+    margin-bottom: 50px;
+    @media screen and (max-width:768px){
+        padding-right: 120px;
+    }
+    @media screen and (max-width:480px){
+        padding-right: 0;
+    }
+    &__title {
+        margin-bottom: 20px;
+        max-width: 780px;
+        @media screen and (max-width:480px){
+            margin-right: 70px;
+        }
+    }
+
+    &__text {
+        max-width: 780px;
+        span{
+            font-family: var(--font-montserrat-norms-semibold);
+        }
+       
+    }
+
+    
+}
+
+.contact-help {
+    display: grid;
+    grid-template:1fr/repeat(2,1fr) ;
+    gap:30px 50px;
+    @media screen and (max-width:768px){
+        gap:30px 20px;
+    }
+    @media screen and (max-width:640px){
+        grid-template:1fr/repeat(1,1fr) ;
+    }
+    
+
+    &__title {
+        font-family: var(--font-montserrat-norms-semibold);
+        font-size: 24px;
+        line-height: 140%;
+        color:var(--secondary-color);
+        margin-bottom: 15px;
+        @media screen and (max-width:480px){
+            font-size: 18px;
+            margin-bottom: 8px;
+        }
+    }
+    &__text{
+
+    }
+
+       
+}
 
 
 
